emptydir.yaml
apiVersion: v1
kind: Pod
metadata:
  name: volume-emptydir
  namespace: dev2025
spec:
  containers:
  - name: nginx
    image: nginx:1.14-alpine
    ports:
    - containerPort: 80
    volumeMounts: #将logs-volume挂载到nginx容器中，对应的目录为 /var/log/nginx
    - name: logs-volume
      mountPath: /var/log/nginx
  - name: busybox
    image: busybox:1.30
    command: ["/bin/sh","-c","tail -f /logs/access.log"] #初始命令，动态读取指定文件中的内容
    volumeMounts: #将logs-volume 挂载到busybox 容器中对应的目录为/logs
    - name: logs-volume
      mountPath: /logs
  volumes: #声明volume, name为logs-volume, 类型为emptydir
  - name: logs-volume
    emptyDir: {}
