nginx-deployment.yaml
apiVersion: v1
kind: Deployment
metadata: 
  name: nginx-deployment
  namespace: dev2025
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx-pod
  template:
    metadata:
      label:
        app: nginx-pod
    spec:
      containers:
      - name: nginx
        image: nginx:1.17.1
        ports:
        - containerPort: 80
