pod-recreated.yaml
#重建更新策略的应用

apiVersion: apps/v1
kind: Deployment
metadata:
  name: pod-recreated
  namespace: dev2025
spec:
  strategy: #更新策略
    type: Recreate #重建更新策略
  replicas: 3
  selector:
    mathLabels:
      app: nginx-pod
  template:
    metadata:
      labels:
        app: nginx-pod
    spec:
      containers:
      - name: nginx
        image: nginx:1.17.1



# 接下来使用 kubectl 部署:
kubectl apply -f pod-recreated.yaml 

# 查看pod 的运行情况并监视:
kubectl get pods -n dev2025 -w

#更新镜像的版本，比如将nginx 从1.17.1 更新到1.17.2
kubectl set image deploy pod-recreated nginx=nginx:1.17.2 -n dev2025
