ClusterIP-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: clusterIp-service
  namespace: dev2025
spec:
  selector:
    app: nginx-pod
  clusterIP: 10.97.97.97 # service 的IP地址，如果不写，系统会默认分配
  type: ClusterIP
  ports: 
  - port: 80 #Service端口
    targetPort: 80 #Pod 端口
